--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
 <div style="text-align:center;">
 
-<video style="font-size:1.2em;width:40%;margin-top:50px;margin-bottom:20px;" src="vi2/v3.mp4" controls/>
+<video style="font-size:1.2em;width:40%;margin-top:50px;margin-bottom:20px;" src="v3/video.mp4" controls/>
 
 
 </div>
 <div style="text-align:center;">
-<video style="font-size:1.2em;width:40%;margin-top:50px;margin-bottom:20px;" src="vi2/v2.mp4" controls/>
+<video style="font-size:1.2em;width:40%;margin-top:50px;margin-bottom:20px;" src="v3/video2.mp4" controls/>
 </div>
 
 
