--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
      <meta charset="UTF-8">
 	 <meta http-equiv="x-UA-compatible"content="IE=edge">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="1VSQNm9SuxlXVgVksRVVOk1qXeUF0x7e_9K7Ab5PVNU" />
+	
+
      <title> 
 	 Shri Bhairav Dham Sarkar.
 	 </title>
