--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
      <title> 
 	 Shri Bhairav Dham Sarkar.
 	 </title>
+	
+<meta name="description" content="Official website of Shri Bhairav Dham Sarkar – Videos, Photos, Devotional Content, and more.">
+<meta name="keywords" content="Bhairav Baba, Mandir, Sarkar, Bhakti, Dham, Photos, Videos">
+<meta name="author" content="Anshesh Rajawat">
+
 	 <link rel="stylesheet" href="style.css">
 </head>
 <body>
