--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
     <h1 style="text-align:center;color:#8B0000;">*ONE SHOTE*</h1>
     
     <div style="text-align:center;">
-        <video src="vi/v3.mp4" controls></video>
-        <video src="vi/v2.mp4" controls></video>
+        <video src="v3/video.mp4" controls></video>
+        <video src="v3/video2.mp4" controls></video>
     </div>
     
     <p>
