--- a/obout.html
+++ b/obout.html
@@ -204,7 +204,7 @@
  <a style="padding-right: 0px;text-decoration:none; color:#8aadda; " href="contect.html";>CONTECT</a>
  
 
- <a style="padding-left: 70px;text-decoration:none;color:#8aadda;  " href="donete.html">DONATE</a>
+ <a style="padding-left: 70px;text-decoration:none;color:#8aadda;  " href="donet.html">DONATE</a>
 </div>
 
 <h1 style="text-align:center;margin-bottom:10px;font-size:1.5em;">Full intrto of the oner of "SHRI BHAIRAV DHAM SARKAR"<h1>
