--- a/donet.html
+++ b/donet.html
@@ -267,7 +267,7 @@
         <!-- Navigation -->
         <div class="nav-links animate__animated animate__fadeIn animate__delay-1s">
             <a href="index.html">HOME</a>
-            <a href="concte.html">CONTACT</a>
+            <a href="contect.html">CONTACT</a>
             <a href="donet.html">DONATE</a>
         </div>
         
