--- a/contect.html
+++ b/contect.html
@@ -179,7 +179,12 @@
             </h1>
         </div>
     </main>
-
+<div class="text-center mt-6">
+  <button onclick="window.location.href='https://www.google.com/maps/place/%E0%A4%B6%E0%A5%8D%E0%A4%B0%E0%A5%80+%E0%A4%AD%E0%A5%88%E0%A4%B0%E0%A4%B5+%E0%A4%A7%E0%A4%BE%E0%A4%AE+%E0%A4%B8%E0%A4%BF%E0%A4%A6%E0%A5%8D%E0%A4%A7%E0%A4%AA%E0%A5%80%E0%A4%A0+%E0%A4%86%E0%A4%B6%E0%A5%8D%E0%A4%B0%E0%A4%AE+(%E0%A4%B2%E0%A5%8B%E0%A4%B9%E0%A4%BE%E0%A4%97%E0%A4%A2%E0%A4%BC)/@25.9186953,78.9914866,21z/data=!4m6!3m5!1s0x3977b5d175c7f0c5:0x6e5f7307293937ec!8m2!3d25.9182421!4d78.9915007!16s%2Fg%2F11sdzz6j9y?entry=ttu&g_ep=EgoyMDI1MDcwNi4wIKXMDSoASAFQAw%3D%3D'
+" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg text-lg transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+     स्थान देखें
+  </button>
+</div>
     <!-- Footer -->
     <footer class="bg-gray-100 dark:bg-gray-800 py-6">
         <div class="container mx-auto px-4 text-center text-sm text-gray-600 dark:text-gray-400">
