--- a/index.html
+++ b/index.html
@@ -5,6 +5,70 @@
     <style>
 
 
+.signin-toggle {
+  background-color: white;
+  color: #0072ff;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 2px solid #0072ff;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin: 10px;
+}
+
+.signin-toggle:hover {
+  background-color: #0072ff;
+  color: white;
+}
+
+.login-container {
+  background-color: white;
+  padding: 30px 40px;
+  border-radius: 20px;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  width: 300px;
+  animation: fadeIn 0.4s ease;
+  margin-top: 20px;
+}
+
+.login-container input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 8px;
+  background: #f1f1f1;
+  font-size: 16px;
+}
+
+.login-container button {
+  width: 100%;
+  padding: 12px;
+  background-color: #0072ff;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: all 0.3s ease;
+}
+
+.login-container button:hover {
+  background-color: #005ec2;
+}
+
+#status, #signupStatus {
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.95); }
+  to { opacity: 1; transform: scale(1); }
+}
 
         
 
