--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
         <a href="index.html">HOME</a>
         <a href="contect.html">CONTACT</a>
         <a href="donet.html">DONATE</a>
+         <a href="at.html">VIDEO</a>
     </div>
     
     <div style="text-align:center;">
