--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
         <a href="contect.html">CONTACT</a>
         <a href="donet.html">DONATE</a>
          <a href="at.html">VIDEO</a>
+        <a href="full.html">CONTENT</a>
     </div>
     
     <div style="text-align:center;">
@@ -393,3 +394,4 @@ function logout() {
 </body>
 </html>
     
+
