--- a/full.html
+++ b/full.html
@@ -206,7 +206,7 @@
 </div>
 
 <!-- Marquee -->
-<marquee>🙏 अगला भंडारा: रविवार 4 अगस्त को | सभी भक्तों का स्वागत है! 🙏</marquee>
+<marquee>🙏 धाम में प्रत्येक रविवार को दिव्यदर्शी दरबार लगाया जाता है| सभी भक्तों का स्वागत है! 🙏</marquee>
 
 <!-- Header -->
 <header>
@@ -226,7 +226,7 @@
 
 <!-- Main Content -->
 <main>
-  <h2>🙏 श्री भैरव जी की आरती 🎵</h2>
+  <h2>🙏 श्री भैरव धाम सरकार चालीसा 🎵</h2>
   <audio controls>
     <source src="bhajan.mp3" type="audio/mpeg">
     आपका ब्राउज़र ऑडियो सपोर्ट नहीं करता।
@@ -333,3 +333,4 @@
 </script>
 </body>
 </html>
+
