--- a/full.html
+++ b/full.html
@@ -206,7 +206,7 @@
 </div>
 
 <!-- Marquee -->
-<marquee>🙏 धाम में प्रत्येक रविवार को दिव्यदर्शी दरबार लगाया जाता है| सभी भक्तों का स्वागत है! 🙏</marquee>
+<marquee>🙏 आगामी कार्यक्रम 23 अगस्त 2025 रविवार अमावस्या को दिव्या दरबार लगेगा!| सभी भक्तों का स्वागत है! 🙏</marquee>
 
 <!-- Header -->
 <header>
@@ -333,4 +333,5 @@
 </script>
 </body>
 </html>
+
 
