--- a/full.html
+++ b/full.html
@@ -231,6 +231,7 @@
     <source src="bhajan.mp3" type="audio/mpeg">
     आपका ब्राउज़र ऑडियो सपोर्ट नहीं करता।
   </audio>
+  <button>Make ID</button>
   <img src="logooo.png" class="glow-img" alt="Bhairav Ji">
 </main>
 
@@ -333,6 +334,7 @@
 </script>
 </body>
 </html>
+
 
 
 
