--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
         <a href="donet.html">DONATE</a>
          <a href="at.html">VIDEO</a>
         <a href="full.html">CONTENT</a>
+         <a href="ntrxpallo.html">ID CARD GENERATE</a>
     </div>
     
     <div style="text-align:center;">
@@ -394,4 +395,5 @@ function logout() {
 </body>
 </html>
     
+
 
