--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+</html>
+</head>
     <title>Shri Bhairav Dham Sarkar</title>
     <style>
 
@@ -395,5 +395,6 @@ function logout() {
 </body>
 </html>
     
+
 
 
