--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
-</html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shri Bhairav Dham Sarkar</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    h1 {
+      color: #f33;
+    }
+  </style>
 </head>
-    <title>Shri Bhairav Dham Sarkar</title>
-    <style>
-
-
-.signin-toggle {
-  background-color: white;
-  color: #0072ff;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: 2px solid #0072ff;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  margin: 10px;
-}
-
-.signin-toggle:hover {
-  background-color: #0072ff;
-  color: white;
-}
-
-.login-container {
-  background-color: white;
-  padding: 30px 40px;
-  border-radius: 20px;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
-  text-align: center;
-  width: 300px;
-  animation: fadeIn 0.4s ease;
-  margin-top: 20px;
-}
-
-.login-container input {
-  width: 100%;
+<body>
+  <div>
+    <h1>🔒 Website Under Maintenance</h1>
+    <p>We will be back soon 🙏</p>
+  </div>
+</body>
+</html>  width: 100%;
   padding: 12px;
   margin: 10px 0;
   border: none;
@@ -395,6 +387,7 @@ function logout() {
 </body>
 </html>
     
+
 
 
 
