--- a/ntrxpallo.html
+++ b/ntrxpallo.html
@@ -187,6 +187,7 @@
       text-align:right;
     }
     .card-head-text h2{
+	text-align:center;
   margin:0;
   font-size:36px; /* increased size */
   color:white;
@@ -194,6 +195,7 @@
   font-weight:900;
 }
 .card-head-text p{
+text-align:center;
   margin:4px 0 0;
   color:#ffeaea;
   font-weight:700;
@@ -298,7 +300,7 @@
     <!-- FORM -->
     <div class="form-card" role="region" aria-label="ID form">
       <div class="form-top">
-        <div class="title">श्री भैरव धाम सरकार सेवा मंडल - आईडी जनरेटर</div>
+        <div style=""class="title">श्री भैरव धाम सरकार सेवा मंडल - आईडी जनरेटर</div>
         <div class="addr">पता - ग्राम लोहगढ़, जिला झाँसी (उ. प्र.)</div>
       </div>
 
@@ -354,7 +356,7 @@
 
           <div class="card-head-text">
             <h2>श्री भैरव धाम सरकार सेवा मंडल</h2>
-            <p>पता - ग्राम लोहगढ़, जिला झाँसी (उ. प्र.)</p>
+            <p>पता - ग्राम लोहगढ़, जिला झाँसी (उ. प्र.) संपर्क:- 8103078624</p>
           </div>
         </div>
 
@@ -373,14 +375,35 @@
             <div class="detail-row"><div class="detail-label">मोबाइल:</div><div class="detail-value" id="cardMobile">—</div></div>
             <div class="detail-row"><div class="detail-label">दिनांक:</div><div class="detail-value" id="cardDate">—</div></div>
           </div>
-
+                           
           <div class="qr-block" title="QR">
             <!-- default qr.png — keep this file in same folder -->
-            <img id="cardQR" src="qqrr.png" alt="QR">
+            <img id="cardQR" src="qqrrr.png" alt="QR">
           </div>
-        </div>
+		  
+ <div style="text-align:center;margin-left:222px">  
+		<div style=" 
+		  text-align:center;
+		  display:flex;
+      gap:8px;
+      align-items:center;
+      font-size:15px;
+      color:var(--text-dark);
+      background: rgba(255,255,255,0.85);
+      padding:10px 12px;
+      border-radius:8px;
+      border-left:4px solid rgba(255,119,48,0.12);
+      font-weight:700;">
+	  
+	     <div style="color: #7a3f12;">
+		          पंजीकरण संख्या
+         </div>	
 
-        <div class="card-footer">मानव सेवा ही हमारा धर्म है।</div>
+	  JHA/00030/2022-23
+	  </div>
+				  </div>
+        </div>
+               <div class="card-footer">मानव सेवा ही हमारा धर्म है।</div>
       </div>
     </div>
 
@@ -508,4 +531,5 @@
   </script>
 </body>
 </html>
+
 
