--- a/ntrxpallo.html
+++ b/ntrxpallo.html
@@ -281,7 +281,7 @@ text-align:center;
   color:white;
   font-size:18px;
   padding:12px;
-  background:#d80000; /* red background */
+  background:yellow; /* red background */
   border-radius:0 0 10px 10px;
 }
 
@@ -531,5 +531,6 @@ text-align:center;
   </script>
 </body>
 </html>
+
 
 
