--- a/ntrxpallo.html
+++ b/ntrxpallo.html
@@ -278,7 +278,7 @@ text-align:center;
   margin-top:14px;
   text-align:center;
   font-weight:900;
-  color:white;
+  color:red;
   font-size:18px;
   padding:12px;
   background:yellow; /* red background */
@@ -531,6 +531,7 @@ text-align:center;
   </script>
 </body>
 </html>
+
 
 
 
