--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <!-- TIMER PAGE -->
 <div id="timer-screen">
     <div id="timer-box">
-        <h2>⏳ Website Unlocks In</h2>
+        <h2>⏳ ⚠️Website locks In🔒</h2>
         <div id="countdown">Loading...</div>
     </div>
 </div>
