--- a/obout.html
+++ b/obout.html
@@ -351,6 +351,7 @@ kooapp.com/dnld<br></p>
 
 
 
+
 <html lang="hi">
 <head>
 <meta charset="UTF-8" />
@@ -472,7 +473,14 @@ kooapp.com/dnld<br></p>
         उत्तर प्रदेश के झांसी जिले के ग्राम लोहागढ़ में स्थित “भैरव धाम”, जो स्वंयभू श्री भैरव एवं हनुमान जी की दिव्यता के लिए देश – विदेश में प्रसिद्ध है।
     </p>
     <p>
-        धाम और पूज्य गुरुदेव के दिव्य दरबार के बारे में जानकारी, या आगामी कार्यक्रम जानने के लिए आप कॉन्टेक्ट नंबर पर बात कर सकते हैं।
+        धाम और पूज्य गुरुदेव के दिव्य दरबार के बारे में जानकारी, या आगामी कार्यक्रम जानने के लिए आप कॉन्टेक्ट नंबर पर बात कर सकते हैं।श्री भैरव धाम सरकार 
+उत्तर प्रदेश के झांसी जिले के ग्राम लोहागढ़ में स्थित “भैरव धाम”, जो स्वंयभू श्री भैरव एवं हनुमान जी की दिव्यता के लिए देश – विदेश में प्रसिद्ध है। कई तपस्वियों की दिव्य भूमि है भैरव धाम, जहां लोगों को बालाजी महाराज की कृपा और आशीर्वाद दर्शन मात्र से ही मिल जाते हैं। यहां बालाजी महाराज एक अर्जी के माध्यम से सुनते हैं आपकी समस्या और धाम के पीठाधीश्वर पूज्य श्री राजूदास महाराज, जिसे दुनिया भैरव धाम सरकार के नाम से संबोधित करती है, के माध्यम से समाधान करवाते हैं।
+
+धाम या फिर धाम में लगने वाले पूज्य गुरुदेव के दिव्य दरबार के बारे में जानकारी या फिर भैरव धाम सरकार के आगामी कार्यक्रम की जानकारी हासिल करने के लिए धाम के कॉन्टेक्ट नंबर पर बात करके भी हासिल कर सकते हैं।
+
+भैरव धाम का कॉन्टेक्ट नंबर है – +918103078624 / +9190743 47634
+
+जय बालाजी महाराज…जय श्री भैरव धाम सरकार….
     </p>
 </div>
 
@@ -484,8 +492,16 @@ kooapp.com/dnld<br></p>
 <div class="section">
     <h2>परिचय – श्री भैरव धाम सरकार</h2>
     <p>
-        कण कण में विष्णु बसे, जन जन में श्रीराम, प्राणों में माँ जानकी और मन में बसे हनुमान...
-    </p>
+       परिचय – श्री भैरव धाम सरकार 
+कण कण में विष्णु बसे जन जन में श्रीराम प्राणों में माँ जानकी मन में बसे हनुमान.
+
+करीब 100 साल पहले जिस मानव कल्याण और जनसेवा की परंपरा को पूरनदास महाराज ने शुरु किया था, अब इसी परंपरा को और आगे बढ़ा रहे हैं भैरव जी महाराज के कृपा पात्र, श्री महावीरदास गुरुजी महाराज के उत्तराधिकारी पूज्य राजूदास महाराज , जिसे पूरी दुनिया श्री भैरव धाम सरकार के नाम से संबोधत करती है। भक्तों का कष्ट हरने भगवान खुद इस धरती पर नहीं विराजते बल्कि अपने किसी दूत को भेजते हैं। भैरव धाम सरकार, भैरव के वो भक्त हैं जिनपर उनकी असीम कृपा है। यहां जो भी भैरव महाराज की शरण में अपनी मनोकामना लेकर आता है, भैरव महाराज अपने परम भक्त राजूदास महाराज के माध्यम से उसे पूर्ण करवाते हैं।
+
+भैरव महाराज के आशीर्वाद से महाराज श्री राजूदास की ख्याति की गवाही तो उनकी सेवा और उनके दरबारों में श्रद्धालुओं की भीड़ देती है। महाराज श्री के दर्शन और उनकी एक झलक पाने के लिए ना जाने कहां कहां से श्रद्धालुगण देशभर से रविवार एवं अमावस्या को आश्रम में पहुंचते हैं और उनकी दिव्यवाणी का श्रवण करते हैं।
+
+2 फरवरी 1995 को उत्तरप्रदेश के झांसी जिले के ग्राम लोहागढ़ में सनाढ्य ब्रह्मण परिवार में पिता श्री लालजी श्रीधर महाराज के परिवार में जन्मे पूज्य गुरुदेव बचपन से ही भैरव मंदिर पर पूजा करने जाते थे!
+लेकिन एक दिन भैरव महाराज की आज्ञा और कृपा से उन्हें श्री श्री 108 महावीरदास महाराज का सानिध्य प्राप्त हुआ उनका आशिर्वाद और आदेश से महाराज श्री भैरव महाराज की सेवा में जुट गए। 
+जनकल्याण और समाज कल्याण के कार्यों के क्रम में जिस तरह से मानव जाति का कल्याण होता आया है, इसके लिए युगों युगों तक गुरुदेव के संकल्प और उनकी कीर्ति याद रखी जाएगी। अपने लिए ना जी कर दूसरों के लिए जीये, दूसरों के लिए कुछ करने के संकल्प के साथ अपना पूरा समय मानवता की सेवा में दे, ऐसे महापुरुष संत को बारम बार नमन…  </p>
 </div>
 
 <footer>
