--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 </html>
 </head>
@@ -252,7 +253,7 @@
         }
     </style>
 </head>
-
+<meta name="google-site-verification" content="1VSQNm9SuxlXVgVksRVVOk1qXeUF0x7e_9K7Ab5PVNU" />
 
     <!-- Sign Up and Sign In buttons -->
 <button class="signin-toggle" onclick="showSignUp()">Sign Up</button>
