--- a/obout.html
+++ b/obout.html
@@ -341,6 +341,7 @@ kooapp.com/dnld<br></p>
   <hr>
   <h6 style=text-align:center;>------------:"Thanks For Wisiting Shri bhairav dham sarkar":------------
 </body>
+
 </html>
 
 
@@ -453,6 +454,95 @@ kooapp.com/dnld<br></p>
         color: white;
         margin-top: 20px;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* -------------------- MOBILE RESPONSIVE FIX -------------------- */
+@media (max-width: 768px) {
+
+    body {
+        padding: 10px;
+        text-align: center;
+    }
+
+    img {
+        width: 90% !important;
+        margin-left: 0 !important;
+    }
+
+    video {
+        width: 90% !important;
+    }
+
+    h1, h2, h3, h4, h5, h6, p {
+        margin-left: 0 !important;
+        text-align: center !important;
+    }
+
+    .btn {
+        font-size: 18px !important;
+        padding: 10px 25px !important;
+    }
+
+    /* Links Row */
+    .links {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .links a {
+        display: block;
+        padding: 10px 0 !important;
+    }
+
+    /* Fix long paragraphs margin */
+    p {
+        padding: 0 10px;
+    }
+
+    /* Fix icons row */
+    img[style*="margin-left:450px"] {
+        margin-left: 0 !important;
+        display: block;
+        margin: 20px auto !important;
+    }
+
+    /* Fix big left margins */
+    [style*="margin-left:350px"],
+    [style*="margin-left:200px"] {
+        margin-left: 0 !important;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 </style>
 </head>
 <body>
