--- a/obout.html
+++ b/obout.html
@@ -305,32 +305,39 @@ instagram.com/bhairavdham206?igshid=NTA5ZTk1NTc=<br></p>
 <p style="margin-left:350px;">official Facebook<br>
 facebook.com/profile.php?id=100008490546059&mibextid=ZbWKwL<br></p>
 
-<h3 style="margin-left:350px;color:red;">KOO:-</h3>
-<p style="margin-left:350px;">Koo<br>
-kooapp.com/dnld<br></p>
-
-<img style="width: 5%;margin-left:450px;margin-top:40px" src="ytt.jpg">
-<a style=" text-decoration:none;color:#8aadda;margin-bottom:50px;margin-left:450px " href="http://www.youtube.com/@bhairavdhamsarkar">YOUTUBE</a>
 
 
-<img style="width: 5%;margin-left:450px;margin-top:40px" src="instaa.jpg">
-<a style=" text-decoration:none;color:#8aadda;margin-bottom:50px;margin-left:450px " href="https://www.instagram.com/bhairavdham206?igshid=NTA5ZTk1NTc%3D">INSTAGRAM</a>
-
-<img style="width: 5%;margin-left:450px;margin-top:40px" src="fbb.png">
-<a style=" text-decoration:none;color:#8aadda;margin-bottom:50px;margin-left:450px;margin-BOTTOM:50px; " href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbVQ0MDJpM291QnZzQXlFek5vMG93S0UxQjJNQXxBQ3Jtc0ttb2g5dzEzZHF3cDRQWWowcWtac0ZnbGUtYlpQc3ZSYi10b25PSGxXREp0M2RGLXpYZ1RBYTI5d2tJSzJad3dmLVQtS3hmdDZlSWhqVkdiV3JWZkY4aE43RV9PQ1p4VzQtN0l3aVN1MFFxVjI3WS1YSQ&q=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100008490546059%26mibextid%3DZbWKwL">FACEBOOK</a>
 
 
-<img style="width: 5%;margin-left:450px;margin-top:40px" src="a.jpg">
-<a style=" text-decoration:none;color:#8aadda;margin-bottom:50px;margin-left:450px " href="https://forms.gle/d8yFKJVbwRonnakS8">रजिस्ट्रेशन फॉर्म
-</a>
 
+
+
+
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="http://www.youtube.com/@bhairavdhamsarkar" target="_blank">
+    <img src="ytt.jpg" alt="YouTube" style="width:80px; cursor:pointer; margin-top:40px;">
+</a><br>
+
+
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.youtube.com/@YourChannelLink" target="_blank">
+    <img src="instaa.jpg" alt="YouTube" style="width:80px; cursor:pointer;margin-top:40px;">
+</a><br>
+
+
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.youtube.com/@YourChannelLink" target="_blank">
+    <img src="fbb.png" alt="YouTube" style="width:80px; cursor:pointer;margin-top:40px;">
+</a><br>
+
+
+
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://forms.gle/d8yFKJVbwRonnakS8" target="_blank">
+    <img src="a.jpg" alt="YouTube" style="width:80px; cursor:pointer;margin-top:40px;">
+</a><br>
 
 
 <p style="font-size:1.0em; text-align:center;margin-right: 20px;padding-right: 20px;">If you want to CONTECT HIM, <br>
 
 
-<p style="text-align:center;">.So their is some few steps to contect him::---<br></p>
-  <ul>
+
   
   
   <li>"CLICK TO THE CONTECT LINK, BOTTOM ON THE WEBPAGE"</li>
@@ -609,3 +616,4 @@ kooapp.com/dnld<br></p>
 
 </body>
 </html>
+
