--- a/obout.html
+++ b/obout.html
@@ -313,17 +313,17 @@ facebook.com/profile.php?id=100008490546059&mibextid=ZbWKwL<br></p>
 
 
 
-<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="http://www.youtube.com/@bhairavdhamsarkar" target="_blank">
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.youtube.com/@rajupandit83" target="_blank">
     <img src="ytt.jpg" alt="YouTube" style="width:80px; cursor:pointer; margin-top:40px;">
 </a><br>
 
 
-<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.youtube.com/@YourChannelLink" target="_blank">
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.instagram.com/bhairavbhakt173?igsh=cWU5aGI1OGNlMjBj" target="_blank">
     <img src="instaa.jpg" alt="YouTube" style="width:80px; cursor:pointer;margin-top:40px;">
 </a><br>
 
 
-<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.youtube.com/@YourChannelLink" target="_blank">
+<a style="width: 5%;margin-left:50px; margin-bottom:60px; margin-top:60px;" href="https://www.facebook.com/share/17PM97HFWi/" target="_blank">
     <img src="fbb.png" alt="YouTube" style="width:80px; cursor:pointer;margin-top:40px;">
 </a><br>
 
@@ -616,4 +616,5 @@ facebook.com/profile.php?id=100008490546059&mibextid=ZbWKwL<br></p>
 
 </body>
 </html>
+
 
