--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         
         body {
-		    margin-left:85px;
+		    margin-left:60px;
             line-height: 1.6;
             color: var(--text-color);
             background-color: #f9f9f9;
@@ -787,15 +787,15 @@
 
 /* 🔁 CHANGE THESE IMAGES ONLY */
 .slide-1 {
-    background-image: url("rs.jpg");
+    background-image: url("rss.jpg");
 }
 
 .slide-2 {
-    background-image: url("rs2.jpg");
+    background-image: url("rss2.jpg");
 }
 
 .slide-3 {
-    background-image: url("rs.jpg");
+    background-image: url("rss.jpg");
 }
     </style>
 </head>
@@ -1219,6 +1219,7 @@
 </body>
 </html>
     
+
 
 
 
