--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
                     <div class="card-content">
                         <h3 class="hindi">गुरुदेव परिचय</h3>
                         <p class="hindi">बागेश्वर धाम के पीठाधीश्वर एवं आध्यात्मिक मार्गदर्शक के बारे में जानकारी। गुरुदेव की कृपा से भक्तों को मार्गदर्शन प्राप्त होता है।</p>
-                        <a href="parichay.html" class="card-btn hindi">अधिक जानें</a>
+                        <a href="parchay.html" class="card-btn hindi">अधिक जानें</a>
                     </div>
                 </div>
                 
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
