--- a/index.html
+++ b/index.html
@@ -1098,28 +1098,28 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="event-date">15 जून 2023</td>
-                        <td class="hindi">हनुमान चालीसा कथा <span class="event-live">LIVE</span></td>
-                        <td class="hindi">बागेश्वर धाम, छतरपुर</td>
-                        <td class="hindi">शाम 6:00 बजे</td>
+                        <td class="event-date">***</td>
+                        <td class="hindi">*** <span class="event-live">LIVE</span></td>
+                        <td class="hindi">***, छतरपुर</td>
+                        <td class="hindi">शाम *** बजे</td>
                     </tr>
                     <tr>
-                        <td class="event-date">20 जून 2023</td>
-                        <td class="hindi">मंगलवार विशेष दरबार</td>
-                        <td class="hindi">बागेश्वर धाम, छतरपुर</td>
-                        <td class="hindi">सुबह 10:00 बजे</td>
+                        <td class="event-date">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
                     </tr>
                     <tr>
-                        <td class="event-date">25 जून 2023</td>
-                        <td class="hindi">सुंदरकांड पाठ</td>
-                        <td class="hindi">दिल्ली</td>
-                        <td class="hindi">सुबह 9:00 बजे</td>
+                        <td class="event-date">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
                     </tr>
                     <tr>
-                        <td class="event-date">30 जून 2023</td>
-                        <td class="hindi">आत्मिक चिकित्सा कार्यक्रम</td>
-                        <td class="hindi">मुंबई</td>
-                        <td class="hindi">दोपहर 3:00 बजे</td>
+                        <td class="event-date">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
+                        <td class="hindi">***</td>
                     </tr>
                 </tbody>
             </table>
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
