--- a/index.html
+++ b/index.html
@@ -1098,28 +1098,28 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="event-date">***</td>
-                        <td class="hindi">*** <span class="event-live">LIVE</span></td>
-                        <td class="hindi">***, छतरपुर</td>
+                        <td class="event-date">18 January 2026 (Sunday)</td>
+                        <td class="hindi">दिव्य दरबार <span class="event-live">LIVE</span></td>
+                        <td class="hindi">सिद्धपीठ आश्रम</td>
                         <td class="hindi">शाम *** बजे</td>
                     </tr>
                     <tr>
-                        <td class="event-date">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
+                        <td class="event-date">25 January 2026 (Sunday)</td>
+                        <td class="hindi">दिव्य दरबार</td>
+                        <td class="hindi">सिद्धपीठ आश्रम</td>
+                        <td class="hindi">शाम***</td>
                     </tr>
                     <tr>
-                        <td class="event-date">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
+                        <td class="event-date">01 February 2026 (Sunday)</td>
+                        <td class="hindi">दिव्य दरबार</td>
+                        <td class="hindi">सिद्धपीठ आश्रम/td>
+                        <td class="hindi">शाम***</td>
                     </tr>
                     <tr>
-                        <td class="event-date">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
-                        <td class="hindi">***</td>
+                        <td class="event-date">08 February 2026 (Sunday)</td>
+                        <td class="hindi">दिव्य दरबार</td>
+                        <td class="hindi">सिद्धपीठ आश्रम</td>
+                        <td class="hindi">शाम***</td>
                     </tr>
                 </tbody>
             </table>
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
