--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="hindi">गुरुदेव परिचय</h3>
-                        <p class="hindi">बागेश्वर धाम के पीठाधीश्वर एवं आध्यात्मिक मार्गदर्शक के बारे में जानकारी। गुरुदेव की कृपा से भक्तों को मार्गदर्शन प्राप्त होता है।</p>
+                        <p class="hindi">श्री भैरव धाम सरकार के पीठाधीश्वर एवं आध्यात्मिक मार्गदर्शक के बारे में जानकारी। गुरुदेव की कृपा से भक्तों को मार्गदर्शन प्राप्त होता है।</p>
                         <a href="parchay.html" class="card-btn hindi">अधिक जानें</a>
                     </div>
                 </div>
@@ -1112,7 +1112,7 @@
                     <tr>
                         <td class="event-date">01 February 2026 (Sunday)</td>
                         <td class="hindi">दिव्य दरबार</td>
-                        <td class="hindi">सिद्धपीठ आश्रम/td>
+                        <td class="hindi">सिद्धपीठ आश्रम</td>
                         <td class="hindi">शाम***</td>
                     </tr>
                     <tr>
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
