--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                     <div class="card-content">
                         <h3 class="hindi">सेवाएं</h3>
                         <p class="hindi">पूजा, अर्जी दरबार, आध्यात्मिक उपचार एवं अन्य सेवाओं की जानकारी। भक्त अपनी आवश्यकतानुसार सेवाएं प्राप्त कर सकते हैं।</p>
-                        <a href="#" class="card-btn hindi">सभी सेवाएं</a>
+                        <a href="dan.html" class="card-btn hindi">सभी सेवाएं</a>
                     </div>
                 </div>
                 
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
