--- a/index.html
+++ b/index.html
@@ -1101,25 +1101,25 @@
                         <td class="event-date">18 January 2026 (Sunday)</td>
                         <td class="hindi">दिव्य दरबार <span class="event-live">LIVE</span></td>
                         <td class="hindi">सिद्धपीठ आश्रम</td>
-                        <td class="hindi">शाम *** बजे</td>
+                        <td class="hindi">10am-1pm</td>
                     </tr>
                     <tr>
                         <td class="event-date">25 January 2026 (Sunday)</td>
                         <td class="hindi">दिव्य दरबार</td>
                         <td class="hindi">सिद्धपीठ आश्रम</td>
-                        <td class="hindi">शाम***</td>
+                        <td class="hindi">10am-1pm</td>
                     </tr>
                     <tr>
                         <td class="event-date">01 February 2026 (Sunday)</td>
                         <td class="hindi">दिव्य दरबार</td>
                         <td class="hindi">सिद्धपीठ आश्रम</td>
-                        <td class="hindi">शाम***</td>
+                        <td class="hindi">10am-1pm</td>
                     </tr>
                     <tr>
                         <td class="event-date">08 February 2026 (Sunday)</td>
                         <td class="hindi">दिव्य दरबार</td>
                         <td class="hindi">सिद्धपीठ आश्रम</td>
-                        <td class="hindi">शाम***</td>
+                        <td class="hindi">10am-1pm</td>
                     </tr>
                 </tbody>
             </table>
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
