--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
                     <div class="card-content">
                         <h3 class="hindi">कथा एवं कार्यक्रम</h3>
                         <p class="hindi">आगामी कथा, दरबार, आत्मिक चिकित्सा एवं टोकन वितरण कार्यक्रमों की जानकारी। मंगलवार दरबार विशेष।</p>
-                        <a href="#" class="card-btn hindi">कार्यक्रम देखें</a>
+                        <a href="kk.html" class="card-btn hindi">कार्यक्रम देखें</a>
                     </div>
                 </div>
             </div>
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
