--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
     <!-- Introduction Section -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title hindi">स्वागत है आपका भैरव धाम में</h2>
+            <h2 class="section-title hindi">स्वागत है आपका भैरव धाम सरकार में</h2>
             
             <div class="intro-content">
                 <div class="intro-text">
@@ -1349,6 +1349,7 @@
 </body>
 </html>
     
+
 
 
 
